# thermalanalyzer

./: CMakeLists.txt  README.md
Headers/src/: mainwindow.h
mock/: mock_server.cpp  mock_thermal_server.cpp
src/: main.cpp  mainwindow.cpp  mock_server
ui/: mainwindow.ui
